# Zterm

./: .clippy.toml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DIAGNOSIS_AND_FIXES.md  FAQ.md  LOCAL_LLM_FIX_SUMMARY.md  LOCAL_LLM_INVESTIGATION.md  PRIVACY.md  README.md  SECURITY.md  ZTERM.md  about.hbs  about.toml  build_output.txt  failed_logs.txt  logs.txt  presubmit_output.txt
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  04_ssh_legacy.yml
.github/PULL_REQUEST_TEMPLATE/: cherrypick.md  feature_flag.md
.github/issue-triage/: config.json
.github/workflows/: DISABLED_WARP_WORKFLOWS.md  RELEASE.md  ci.yml  comment-on-unready-assigned-issue-local.yml  create-implementation-from-issue-local.yml  create-spec-from-issue-local.yml  create_release.yml  cut_new_release_candidate.yml  cut_new_releases.yml  delete_release.yml  deploy-docs.yml  docubot_reply_to_comment.yml  enforce-pr-issue-state.yml  feature_flag_cleanup.yml  populate_build_cache.yml  release.yml  release_configurations.json  remove-stale-issue-labels-on-plan-approved-local.yml  repo-sync.yml  respond-to-pr-comment-local.yml  respond-to-triaged-issue-comment-local.yml  review-pull-request.yml  triage-new-issues-local.yml  trigger-implementation-on-plan-approved-local.yml  update-dedupe-local.yml  update-pr-review-local.yml  update-triage-local.yml  verify-pr-comment-local.yml
.zterm/workflows/: build_image_and_start_container_for_ssh_testing.yaml  cherrypick_into_release.yaml  copy_keychain_to_warp_local.yaml  create_feature_release_pr.yaml  run_integration_test.yaml  run_warp_with_shell.yaml  run_warp_with_version_and_channel.yaml  script_bundle_temp.yaml  start_new_task.yaml
app/: Cargo.toml  build.rs
app/DockTilePlugin/: Info.plist  README.md
app/examples/: generate_default_settings.rs
app/src/: app_menus.rs  app_state.rs  appearance.rs  changelog_model.rs  channel.rs  crash_recovery.rs  debounce.rs  debug_dump.rs  download_method.rs  features.rs  font_fallback.rs  global_resource_handles.rs  gpu_state.rs  input_classifier.rs  input_suggestions.rs  input_suggestions_test.rs  interval_timer.rs  keyboard.rs  keyboard_test.rs  lib.rs  menu.rs  menu_test.rs  modal.rs  network.rs  notification.rs  palette.rs  preview_config_migration.rs  profiling.rs  projects.rs  referral_theme_status.rs  resource_limits.rs  reward_view.rs  root_view.rs  root_view_tests.rs  search_bar.rs  session_management.rs  system.rs  tab.rs  throttle.rs  vim_registers.rs  (+5 more)
crates/ai/: Cargo.toml
crates/app-installation-detection/: Cargo.toml
crates/asset_cache/: Cargo.toml
crates/asset_macro/: Cargo.toml
crates/computer_use/: Cargo.toml
crates/editor/: Cargo.toml
crates/firebase/: Cargo.toml
crates/fuzzy_match/: Cargo.toml
crates/graphql/: Cargo.toml  build.rs
crates/handlebars/: Cargo.toml
crates/http_client/: Cargo.toml
crates/http_server/: Cargo.toml
crates/input_classifier/: Cargo.toml
crates/integration/: Cargo.toml
crates/ipc/: Cargo.toml
crates/isolation_platform/: Cargo.toml
crates/jsonrpc/: Cargo.toml
crates/languages/: Cargo.toml
crates/languages/src/: lib.rs
crates/lsp/: Cargo.toml
crates/managed_secrets/: Cargo.toml
crates/managed_secrets_wasm/: Cargo.toml
crates/markdown_parser/: Cargo.toml
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs  macros.rs  macros_tests.rs  manager.rs  mod_tests.rs  schema.rs
crates/simple_logger/: Cargo.toml
crates/simple_logger/src/: lib.rs  manager.rs  manager_tests.rs
crates/syntax_tree/: Cargo.toml
crates/syntax_tree/src/: lib.rs
crates/syntax_tree/src/queries/: highlight_query.rs  indent_query.rs  indent_query_tests.rs
crates/ui_components/: Cargo.toml
crates/ui_components/examples/: library.rs
crates/ui_components/src/: button.rs  dialog.rs  keyboard_shortcut.rs  lib.rs  lightbox.rs  switch.rs  tooltip.rs
crates/ui_components/src/button/: params.rs  themes.rs
crates/vim/: Cargo.toml
crates/vim/src/: find_char.rs  matching_brackets.rs  paragraph_iterator.rs  vim.rs  word_iterator.rs
crates/vim/src/text_objects/: block.rs  paragraph.rs  quote.rs  word.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: home_watcher.rs  lib.rs
crates/zterm_completer/: Cargo.toml
crates/zterm_completer/src/completer/: describe.rs  describe_test.rs
crates/zterm_completer/src/completer/context/: mod.rs  v2.rs
crates/zterm_completer/src/completer/engine/: path.rs  path_test.rs  test.rs
crates/zterm_completer/src/completer/engine/argument/: legacy.rs
crates/zterm_completer/src/completer/suggest/: alias_test.rs  mod.rs  test.rs
crates/zterm_completer/src/completer/testing/: mod.rs  v2.rs
crates/zterm_completer/src/parsers/: test.rs
crates/zterm_completer/src/parsers/simple/: mod.rs  parser_test.rs
crates/zterm_completer/src/signatures/legacy/: mod.rs  registry_test.rs
crates/zterm_completer/src/signatures/testing/: legacy.rs  v2.rs
crates/zterm_completer/src/signatures/v2/: js.rs  mod.rs
crates/zterm_files/: Cargo.toml
crates/zterm_files/src/: lib.rs  lib_test.rs
crates/zterm_terminal/: Cargo.toml
crates/zterm_terminal/src/model/: escape_sequences.rs  escape_sequences_test.rs  indexing.rs  mouse.rs
crates/zterm_terminal/src/model/escape_sequences/: kitty_keyboard_protocol.rs
crates/zterm_terminal/src/shell/: mod.rs
docs/: MIGRATION_GUIDE.md  PROJECT_CONTEXT.md  REBRANDING.md  index.md  package-lock.json  package.json  zterm_plan.md
graphify-out/: .graphify_analysis.json  .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_chunk_03.json  .graphify_chunk_04.json  .graphify_chunk_05.json  .graphify_chunk_06.json  .graphify_chunk_07.json  .graphify_chunk_08.json  .graphify_chunk_09.json  .graphify_chunk_10.json  .graphify_chunk_11.json  .graphify_chunk_12.json  .graphify_chunk_13.json  .graphify_chunk_14.json  .graphify_chunk_15.json  .graphify_chunks_manifest.json  .graphify_detect.json  .graphify_python  .graphify_uncached.txt  GRAPH_REPORT.md
script/: fix_cargo_paths.ps1  rebrand.ps1
specs/: zterm_plan.md
(+1872 files in other folders)
