[package]
name = "languages"
edition = "2021"
authors = ["Zterm Team <dev@warp.dev>"]
publish.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
rust-embed.workspace = true
arborium.workspace = true
lazy_static.workspace = true
zterm_editor = { path = "../editor" }
