[package]
name = "settings"
edition = "2024"
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
concat-idents.workspace = true
inventory = "0.3"
log.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
settings_value = { workspace = true, features = ["derive"] }
zterm_features.workspace = true
zterm_ui = { workspace = true, features = ["settings_value"] }
zterm_ui_extras = { workspace = true, features = ["default"] }

[dev-dependencies]
serial_test = "0.8.0"
tempfile.workspace = true
zterm_ui_extras = { workspace = true, features = ["user_preferences-toml"] }

[features]
integration_tests = []
