[package]
name = "simple_logger"
version = "0.1.0"
edition = "2021"
authors = ["Zterm Team <dev@warp.dev>"]
publish.workspace = true
license.workspace = true
description = "Simple file-based async logger for server stderr output"

[dependencies]
async-channel = { workspace = true }
async-fs = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
thiserror.workspace = true
zterm_core = { workspace = true }
zterm_ui.workspace = true
