[package]
name = "syntax_tree"
version = "0.1.0"
edition = "2021"
authors = ["Zterm Team <dev@warp.dev>"]
publish.workspace = true
license.workspace = true

[dependencies]
rangemap.workspace = true
arborium.workspace = true
zterm_ui.workspace = true
zterm_editor.workspace = true
languages.workspace = true
futures.workspace = true
futures-lite.workspace = true
parking_lot.workspace = true
log.workspace = true
string-offset.workspace = true
streaming-iterator = "0.1.9"
zterm_util.workspace = true

[dev-dependencies]
zterm_editor = { workspace = true, features = ["test-util"] }
zterm_ui = { workspace = true, features = ["test-util"] }
