[package]
name = "ui_components"
edition = "2024"
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
pathfinder_color.workspace = true
pathfinder_geometry.workspace = true
zterm_ui.workspace = true
zterm_core.workspace = true

[dev-dependencies]
anyhow.workspace = true
asset_cache.workspace = true
rust-embed.workspace = true
rustls.workspace = true
zterm_core = { workspace = true, features = ["test-util"] }
