[package]
name = "watcher"
version = "0.1.0"
edition = "2021"
authors = ["Zterm Team <dev@warp.dev>"]
publish.workspace = true
license.workspace = true

[dependencies]
async-channel.workspace = true
zterm_ui.workspace = true
log.workspace = true
anyhow.workspace = true
notify-debouncer-full.workspace = true
futures.workspace = true
