[package]
name = "zterm_files"
version = "0.1.0"
edition = "2021"
authors = ["Zterm Team <dev@warp.dev>"]
publish.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
async-channel.workspace = true
async-fs.workspace = true
futures.workspace = true
thiserror.workspace = true
zterm_ui.workspace = true
remote_server.workspace = true
zterm_core.workspace = true
zterm_util.workspace = true
watcher.workspace = true
notify-debouncer-full.workspace = true
repo_metadata.workspace = true
log.workspace = true

[features]
test-util = []

[dev-dependencies]
async-channel.workspace = true
tempfile.workspace = true
